// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Change Password Form renders Change Password Form 1`] = `
<div
  className=""
  style={
    Object {
      "marginTop": 24,
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="MuiTypography-root-98 MuiTypography-headline-103 MuiTypography-colorTextPrimary-120"
    >
      Change Password
    </h2>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-123 MuiFormControl-marginDense-125"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-132 MuiInputLabel-root-127 MuiInputLabel-formControl-128 MuiInputLabel-animated-131 MuiInputLabel-marginDense-129"
        data-shrink={false}
        htmlFor={undefined}
      >
        Current Password
      </label>
      <div
        className="MuiInput-root-139 MuiInput-formControl-140 MuiInput-underline-143"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-147 MuiInput-inputType-150 MuiInput-inputMarginDense-148"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="currentPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-152 MuiFormHelperText-marginDense-155"
        id={undefined}
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-123 MuiFormControl-marginDense-125"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-132 MuiInputLabel-root-127 MuiInputLabel-formControl-128 MuiInputLabel-animated-131 MuiInputLabel-marginDense-129"
        data-shrink={false}
        htmlFor={undefined}
      >
        New Password
      </label>
      <div
        className="MuiInput-root-139 MuiInput-formControl-140 MuiInput-underline-143"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-147 MuiInput-inputType-150 MuiInput-inputMarginDense-148"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="newPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-152 MuiFormHelperText-marginDense-155"
        id={undefined}
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-123 MuiFormControl-marginDense-125"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-132 MuiInputLabel-root-127 MuiInputLabel-formControl-128 MuiInputLabel-animated-131 MuiInputLabel-marginDense-129"
        data-shrink={false}
        htmlFor={undefined}
      >
        Confirm New Password
      </label>
      <div
        className="MuiInput-root-139 MuiInput-formControl-140 MuiInput-underline-143"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-147 MuiInput-inputType-150 MuiInput-inputMarginDense-148"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="confirmNewPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-152 MuiFormHelperText-marginDense-155"
        id={undefined}
      >
         
      </p>
    </div>
    <h2
      className="MuiTypography-root-98 MuiTypography-body1-107 MuiTypography-colorTextPrimary-120"
      style={
        Object {
          "color": "#E53935",
        }
      }
    >
      test
    </h2>
    <button
      className="MuiButtonBase-root-185 MuiButtonBase-disabled-186 MuiButton-root-159 MuiButton-text-161 MuiButton-outlined-167 MuiButton-sizeSmall-182 MuiButton-disabled-179"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginTop": 10,
        }
      }
      tabIndex="-1"
      type="submit"
    >
      <span
        className="MuiButton-label-160"
      >
        Change Password
      </span>
    </button>
  </form>
</div>
`;

exports[`Change Password Form renders Change Password with isChangingPassword as true 1`] = `
<div
  className=""
  style={
    Object {
      "marginTop": 24,
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="MuiTypography-root-98 MuiTypography-headline-103 MuiTypography-colorTextPrimary-120"
    >
      Change Password
    </h2>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-123 MuiFormControl-marginDense-125"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-132 MuiInputLabel-root-127 MuiInputLabel-formControl-128 MuiInputLabel-animated-131 MuiInputLabel-marginDense-129"
        data-shrink={false}
        htmlFor={undefined}
      >
        Current Password
      </label>
      <div
        className="MuiInput-root-139 MuiInput-formControl-140 MuiInput-underline-143"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-147 MuiInput-inputType-150 MuiInput-inputMarginDense-148"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="currentPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-152 MuiFormHelperText-marginDense-155"
        id={undefined}
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-123 MuiFormControl-marginDense-125"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-132 MuiInputLabel-root-127 MuiInputLabel-formControl-128 MuiInputLabel-animated-131 MuiInputLabel-marginDense-129"
        data-shrink={false}
        htmlFor={undefined}
      >
        New Password
      </label>
      <div
        className="MuiInput-root-139 MuiInput-formControl-140 MuiInput-underline-143"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-147 MuiInput-inputType-150 MuiInput-inputMarginDense-148"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="newPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-152 MuiFormHelperText-marginDense-155"
        id={undefined}
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-123 MuiFormControl-marginDense-125"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-132 MuiInputLabel-root-127 MuiInputLabel-formControl-128 MuiInputLabel-animated-131 MuiInputLabel-marginDense-129"
        data-shrink={false}
        htmlFor={undefined}
      >
        Confirm New Password
      </label>
      <div
        className="MuiInput-root-139 MuiInput-formControl-140 MuiInput-underline-143"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-147 MuiInput-inputType-150 MuiInput-inputMarginDense-148"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="confirmNewPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-152 MuiFormHelperText-marginDense-155"
        id={undefined}
      >
         
      </p>
    </div>
    <h2
      className="MuiTypography-root-98 MuiTypography-body1-107 MuiTypography-colorTextPrimary-120"
      style={
        Object {
          "color": "#E53935",
        }
      }
    >
      test
    </h2>
    <button
      className="MuiButtonBase-root-185 MuiButtonBase-disabled-186 MuiButton-root-159 MuiButton-text-161 MuiButton-outlined-167 MuiButton-sizeSmall-182 MuiButton-disabled-179"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginTop": 10,
        }
      }
      tabIndex="-1"
      type="submit"
    >
      <span
        className="MuiButton-label-160"
      >
        <div
          className="MuiCircularProgress-root-195 MuiCircularProgress-colorPrimary-198 MuiCircularProgress-indeterminate-197"
          role="progressbar"
          style={
            Object {
              "height": 22,
              "width": 22,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-200"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle-201 MuiCircularProgress-circleIndeterminate-203"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </span>
    </button>
  </form>
</div>
`;
